--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,16 +1,71 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}TripPlanner{% endblock %}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+    <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
+</head>
+<body>
+    <!-- Mobile bar -->
+    <div id="topbar" class="d-block d-md-none">
+        <span class="h4 mx-2">TP</span>
+        <ul class="nav flex-column">
+            <li class="nav-item px-2">
+                <i class="toggleButton bi bi-list h3 px-1"></i>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link " href="/trips"><i class="bi bi-suitcase2"></i> </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link {% if app.request.get('_route') starts with 'vehicle_' %}active{% endif %}" href="{{ path('vehicle_index') }}"><i class="bi bi-car-front"></i> </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link " href="/drivers"><i class="bi bi-person-standing"></i> </a>
+            </li>
+        </ul>
+    </div>
 
-        {% block javascripts %}
-        {% endblock %}
-    </head>
-    <body>
+    <!-- Sidebar -->
+    <nav id="sidebar" class="d-none d-md-block">
+        <div class="p-3">
+            <h4 class="mb-4">TripPlanner</h4>
+            <div class="d-md-none px-3">
+                <i class="toggleButton bi bi-list h3"></i>
+            </div>
+            <ul class="nav flex-column">
+                <li class="nav-item">
+                    <a class="nav-link " href="/trips"><i class="bi bi-suitcase2"></i> Trips</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {% if app.request.get('_route') starts with 'vehicle_' %}active{% endif %}" href="{{ path('vehicle_index') }}"><i class="bi bi-car-front"></i> Vehicles</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link " href="/drivers"><i class="bi bi-person-standing"></i> Drivers</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- main content -->
+    <div id="content">
         {% block body %}{% endblock %}
-    </body>
+    </div>
+
+    <script>
+        const toggleButtons = document.querySelectorAll('.toggleButton');
+        const sidebar = document.getElementById('sidebar');
+
+        toggleButtons.forEach(function(toggleButton) {
+            toggleButton.addEventListener('click', function() {
+                sidebar.classList.toggle('show');
+                sidebar.classList.toggle('d-none');
+            });
+        });
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
+</body>
 </html>
