--- a/templates/driver/show.html.twig
+++ b/templates/driver/show.html.twig
@@ -18,9 +18,6 @@
             </tr>
         </table>
 
-        <a href="{{ path('driver_index') }}" class="btn btn-secondary mt-2">
-          <i class="bi bi-chevron-left"></i> Back to list
-        </a>
         <a href="{{ path('driver_edit', {id: driver.id}) }}" class="btn btn-warning mt-2">
           <i class="bi bi-pencil"></i> Edit
         </a>
@@ -29,6 +26,40 @@
             <i class="bi bi-trash"></i> Delete
         </button>
       </div>
+
+        <div class="col-lg-8 offset-lg-2 sm-12 col-md-10 offset-md-1 mt-5">
+            <h3 class="mb-4"><i class="bi bi-suitcase2"></i> Recent trips</h3>
+            {%if trips is  empty %}
+                <p>There are no recent trips for this driver</p>
+            {% else %}
+                <p>Showing the last {{ trips|length }} trips for {{ driver.name }}</p>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Vehicle</th>
+                            <th>Brand</th>
+                            <th>Model</th>
+                            <th>Date</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for trip in trips %}
+                            <tr>
+                                <td>{{ trip.vehicle.plate }}</td>
+                                <td>{{ trip.vehicle.brand }}</td>
+                                <td>{{ trip.vehicle.model }}</td>
+                                <td>{{ trip.stringdate }}</td>
+                            </tr>
+                            {% endfor %}
+                    </tbody>
+                </table>
+            {% endif %}
+        </div>
+        <div class="col-lg-8 offset-lg-2 sm-12 col-md-10 offset-md-1 mt-3">
+            <a href="{{ path('driver_index') }}" class="btn btn-secondary mt-2">
+                <i class="bi bi-chevron-left"></i> Back to list
+            </a>
+        </div>
     </div>
 
     <!-- Modal -->
